--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   socket_io_client: ^2.0.0
   provider: ^6.0.3
   google_fonts: ^3.0.1
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
